gestion-produits/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: api_image:latest  # je dois le remplacer par l'image docker réelle après que je l'ai mis sur Docker Hub
          imagePullPolicy: Never 
          ports:
            - containerPort: 3000
